--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ APP_BOT_NAME=ozon_bot
 APP_BOT_TOKEN=
 APP_DATA_DIR=/app/data
 LOGGING_LEVEL_ROOT=DEBUG
+S3_ENABLED=true
+S3_ENSURE_BUCKET=false
+S3_ENDPOINT=
+S3_BUCKET=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
